Add route to get authorization with client credentials flow
